--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@aacassandra/jquery.pwstrength": "^0.0.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@mdi/font": "^4.6.95",
+    "@mui/material": "^5.11.2",
     "axios": "^1.1.3",
     "bootstrap": "^4.2.1",
     "bootstrap-colorpicker": "^3.0.3",
@@ -36,13 +39,14 @@
     "inputmask": "^4.0.9",
     "ionicons201": "1.0.0",
     "izitoast": "^1.4.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.6.3",
     "jquery-sparkline": "^2.4.0",
     "jquery-ui-dist": "^1.12.1",
     "jquery.nicescroll": "^3.7.6",
     "jquery.upload.preview.psk": "^1.0.3",
     "jqvmap": "^1.5.1",
     "jszip": "^3.2.2",
+    "mdbreact": "^5.2.0",
     "moment": "^2.24.0",
     "owl.carousel": "^2.3.4",
     "parse": "^2.8.0",
